Quarto Commit (dtos e services finalizados)